--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
   <meta charset="UTF-8" />
 </head>
 
-<body>
+<body id="achtergrond">
   <div class="page">
 
     <header>
-      <h1 id="hoofdtitel" class="belangrijk">De beste site van Nederland</h1>
+      <h1 id="hoofdtitel" class="belangrijk">Vlinders</h1>
     </header>
 
     <nav>
       <ul>
         <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="overmij.html">Over mij</a></li>
-        <li><a href="info.html">Informatie</a></li>
+        <li><a href="overmij.html">Soorten vlinders</a></li>
+        <li><a href="info.html">Bloemen</a></li>
+        <li><a href="voedsel.html">Voedsel</a></li>
       </ul>
     </nav>
 
@@ -27,9 +28,8 @@
       <h2>Lorem Ipsum</h2>
 
       <div class="item">
-        <img class="item-plaatje" src="afbeeldingen/loremipsum.jpg" alt="lorem ipsum">
         <p class="item-tekst">
-          <a href="http://nu.nl">Klik hier</a> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
+          <a href="https://www.vlinderstichting.nl/vlinders/overzicht-vlinders/">Klik hier</a> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
           ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
           ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis
           enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet
@@ -42,8 +42,6 @@
       </div>
 
       <div class="item">
-        <img class="item-plaatje" src="afbeeldingen/loremipsum.jpg" alt="lorem ipsum">
-        <p class="item-tekst">
           Etiam rhoncus. Maecenas tempus, tellus eget
           condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit
           vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut
