--- a/info.html
+++ b/info.html
@@ -18,8 +18,9 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="overmij.html">Over mij</a></li>
-        <li><a class="active" href="info.html">Informatie</a></li>
+        <li><a href="overmij.html">Soorten vlinders</a></li>
+        <li><a class="active" href="info.html">Bloemen</a></li>
+        <li><a href="voedsel.html">Voedsel</a></li>
       </ul>
     </nav>
 
