--- a/voedsel.html
+++ b/voedsel.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="nl">
 
 <head>
@@ -18,9 +17,9 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a class="active" href="overmij.html">Soorten vlinders</a></li>
+        <li><a href="overmij.html">Soorten vlinders</a></li>
         <li><a href="info.html">Bloemen</a></li>
-        <li><a href="voedsel.html">Voedsel</a></li>
+        <li><a class="active" href="voedsel.html">Voedsel</a></li>
       </ul>
     </nav>
 
