--- a/index.html
+++ b/index.html
@@ -25,51 +25,67 @@
     </nav>
 
     <main>
-      <h2>Lorem Ipsum</h2>
+      <h2>Home</h2>
+      <div class="middleblock1">
 
-      <div class="item">
+      <div class="item"> <img src="afbeeldingen/blauwe vlinder witte bloem (2).jpeg">
         <p class="item-tekst">
-          <a href="https://www.vlinderstichting.nl/vlinders/overzicht-vlinders/">Klik hier</a> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
-          ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
-          ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis
-          enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet
-          a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. <a
-            href="http://www.encyclo.nl/begrip/dum%20vivimus%20vivamus">Vivamus</a> elementum semper nisi. Aenean
-          vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem
-          ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque
-          rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.
+          <a target="blank" href="https://www.vlinderstichting.nl/vlinders/overzicht-vlinders/">Klik hier</a> Vlinders staan voor lente, verliefdheid en zorgeloosheid. 
+          Helaas is er ook slecht nieuws: veel vlindersoorten hebben het moeilijk in Nederland. 
+          Welkom op onze website, waar we je meenemen op een betoverende reis door de kleurrijke en wonderlijke wereld van vlinders. 
+          Vlinders zijn niet alleen delicate insecten, maar ook symbolen van transformatie, vrijheid en schoonheid. 
+          Hier ontdek je alles wat je moet weten over deze intrigerende wezens, van hun levenscyclus tot hun betekenis in verschillende culturen.
+          Op deze website nodigen we je uit om de betoverende reis te maken naar de fascinerende levens van vlinders. 
+          Deze wezens zijn meer dan alleen fladderende insecten; ze belichamen de spirituele metamorfose, de fragiele schoonheid van de natuur en de vrijheid van de lucht.
+          Onze website neemt je mee door hun levenscyclus, verkent hun diepgaande betekenissen in diverse culturen en onthult de meest verbluffende vlindersoorten over de hele wereld.
+        
         </p>
       </div>
 
-      <div class="item">
-          Etiam rhoncus. Maecenas tempus, tellus eget
-          condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit
-          vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut
-          libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed
-          fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue
-          velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam,
-          scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis
-          hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
-          In
-          ac dui quis mi consectetuer lacinia.
+      <div class="item"> 
+        <strong>Vlinders als symbolen:</strong> Vlinders hebben altijd al de menselijke verbeelding gevangen. Ze symboliseren verandering, groei en wedergeboorte. 
+        In veel culturen worden vlinders geassocieerd met vrijheid en ziel.<br>
+
+        <strong>De levenscyclus van vlinders:</strong> Van eitje tot rups, van cocon tot vlinder,het is een boeiende reis door de levenscyclus van deze wonderlijke insecten. 
+        Ontdek hoe ze zich aanpassen aan hun omgeving en zich ontwikkelen tot de prachtige wezens die we bewonderen.<br>
+
+        <strong>Soorten en kleurenpracht:</strong> Er zijn duizenden vlindersoorten over de hele wereld, en elk van hen is uniek. 
+        We laten je kennismaken met enkele van de meest opvallende en kleurrijke vlindersoorten, van de majestueuze monarchvlinder tot de sierlijke blauwe morpho.<br>
+
+        <strong>Vlinders in de natuur:</strong> Vlinders spelen een cruciale rol in ons ecosysteem als bestuivers. 
+        Ontdek hoe ze bijdragen aan de verspreiding van planten en bloemen en de biodiversiteit in stand houden.<br>
+
+        <strong>Vlinders in je tuin:</strong> Wil je vlinders naar je eigen achtertuin lokken? 
+        We delen tips over welke planten je kunt kweken en welke praktische stappen je kunt nemen om deze prachtige insecten te verwelkomen.<br>
+
+        <strong>Fotografie en kunst:</strong> Vlinders zijn vaak een inspiratiebron voor kunstenaars en fotografen. 
+        Geniet van adembenemende foto's en kunstwerken die de schoonheid van vlinders vastleggen.<br>
+
         </p>
       </div>
 
       <p>
-        Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed
-        aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent
-        adipiscing. Phasellus ullamcorper ipsum rutrum nunc. Nunc nonummy metus. Vestibulum volutpat pretium libero.
-        Cras id dui. Aenean ut eros et nisl sagittis vestibulum. Nullam nulla eros, ultricies sit amet, nonummy id,
-        imperdiet feugiat, pede. Sed lectus. Donec mollis hendrerit risus. Phasellus nec sem in justo pellentesque
-        facilisis. Etiam imperdiet imperdiet orci. Nunc nec neque. Phasellus leo dolor, tempus non, auctor et, hendrerit
-        quis, nisi.
+        Of je nu een passie hebt voor de natuur, op zoek bent naar symbolische betekenissen of gewoon wilt genieten van de visuele pracht van vlinders, onze website biedt een schat aan informatie en inspiratie.
+         Dompel jezelf onder in de betoverende wereld van vlinders en laat je verwonderen door hun natuurlijke pracht. Welkom in onze vlinderwereld! 
+         Word ondergedompeld in de wonderen van de natuur, ontdek de magie van transformatie en kom meer te weten over de delicate wezens die de wereld verrijken met hun aanwezigheid. 
+         Welkom in de betoverende wereld van vlinders, waar de schoonheid van de natuur tot leven komt! Stel je voor dat je door een zonovergoten bloemenveld wandelt, omringd door een briesje dat zachtjes geurende bloesems laat dansen. 
+         Plotseling, als magie, verschijnen ze - kleurrijke vlinders die de lucht vullen met hun gracieuze vlucht.
+         Welkom in de wereld van vlinders, waar de natuurlijke pracht en wonderen samenkomen in een symfonie van kleuren en vormen.
+         Natuurlijke pracht, vlinders weerspiegelen de kunst van transformatie en symboliseren de cyclus van het leven. 
+         Het is moeilijk om niet gefascineerd te raken door deze wezens, die vanuit nederige rupsen ongelooflijke gedaanteverwisselingen ondergaan om uiteindelijk als elegante vlinders uit hun cocons tevoorschijn te komen.
+         Vlinders, de gracieuze fladderaars van de natuur, hebben de menselijke verbeelding altijd gevangen met hun betoverende schoonheid en symbolische betekenissen. 
+         Deze insecten, die wereldwijd voorkomen in duizenden soorten, vormen een onuitputtelijke bron van verwondering en bewondering.
+         De wereld van vlinders is een wereld vol verwondering en inspiratie. Op onze website nemen we je mee op een ontdekkingsreis naar de rijke en gevarieerde wereld van vlinders. 
+         Of je nu geïnteresseerd bent in hun biologie, symboliek, of gewoon wilt genieten van hun visuele pracht, we nodigen je uit om dieper in de wereld van deze fascinerende wezens te duiken. 
+         Vlinders vormen een brug tussen de natuurlijke wereld en de menselijke verbeelding, waarin de grenzen tussen realiteit en droom vervagen. Welkom in de betoverende wereld van vlinders!
+
       </p>
 
     </main>
 
     <footer>
       <hr />
-      <p class="smalltext">--jouw school-- --jaartal--</p>
+      <p class="smalltext">Emmauscollege 2023</p>
     </footer>
 
   </div>
