--- a/info.html
+++ b/info.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8" />
 </head>
 
-<body>
+<body id="achtergrond2">
   <div class="page">
 
     <header>
@@ -25,18 +25,37 @@
     </nav>
 
     <main>
-      <p>Informatie (van Latijn informare: "vormgeven, vormen, instrueren") is alles wat kennis toevoegt en zo
-        onwetendheid, onzekerheid of onbepaaldheid vermindert. Strikt genomen is informatie pas informatie als die
-        interpreteerbaar is. Interpreteren en integreren van informatie resulteert in kennis. Er verschenen in de loop
-        van de tijd honderden definities van het begrip. Dit komt doordat een aantal (sub)wetenschappen en
-        toepassingsgebieden het verschillend gebruiken. Informatie wordt overgedragen via communicatie. Wie een
-        boodschap overdraagt is de zender en wie de boodschap ontvangt is de ontvanger. Meestal is er
-        tweerichtingsverkeer.</p>
+      <p>
+        Bloemen en vlinders vormen een betoverend duo in de natuur, een symbiose die de pracht van het leven en de cyclus van de seizoenen weerspiegelt. 
+        Wanneer de lente haar intrede doet, ontvouwen bloemen hun kleurrijke bloemblaadjes als een uitnodiging aan de wereld. Het is een schouwspel dat niet alleen onze zintuigen streelt,
+        maar ook een magneet vormt voor de vrolijke fladderaars die we vlinders noemen.<br>
+        De dans tussen bloemen en vlinders begint met de zoektocht naar nectar. Bloemen dienen als levende fonteinen, waaruit de vlinders gulzig putten. De kleurrijke bloemblaadjes fungeren als een lokmiddel, 
+        een feestmaal voor deze gevleugelde tuinbezoekers. De delicate interactie tussen de fragiele vleugels van de vlinder en de tere bloemblaadjes lijkt een choreografie die de natuur zelf heeft bedacht.<br>        
+        Elke bloem heeft zijn eigen unieke aantrekkingskracht op vlinders, variërend van de diepe kelken van de lelie tot de wijd openstaande kelk van de zonnebloem. De geurige lokroep van bloemen geeft aanwijzingen aan de vlinders,
+        als een parfum dat de weg wijst naar een overvloed aan nectar. Het is een samenspel van kleuren en geuren, een uitwisseling van diensten tussen twee verschillende elementen van de natuur.<br>       
+        In de zomer bereikt de alliantie tussen bloemen en vlinders zijn hoogtepunt. Tuinen transformeren in levendige paletten, waar bloemen in volle bloei staan en vlinders fladderen van de ene naar de andere delicatesse. 
+        Het lijkt bijna alsof de bloemen zelf hun vleugels hebben uitgespreid, een uitnodiging aan de vlinders om deel te nemen aan het feest van het leven.<br>       
+        Maar deze samenwerking gaat verder dan alleen voedselvoorziening. Bloemen en vlinders spelen ook een cruciale rol in het ecosysteem door bij te dragen aan bestuiving. 
+        Terwijl de vlinders zich tegoed doen aan de nectar, dragen ze onbewust het stuifmeel van de ene bloem naar de andere, een essentiële stap in het voortplantingsproces van planten.<br>        
+        De herfst brengt verandering in de lucht, en de bloemen bereiden zich voor op hun winterslaap. Vlinders, die gedurende het seizoen hebben bijgedragen aan de bloei van de natuur, 
+        nemen afscheid en laten zich meevoeren door de wind. De cirkel van het leven tussen bloemen en vlinders is compleet, en terwijl de winter zijn intrede doet, 
+        rusten beide partners in afwachting van de wedergeboorte in de lente.<br>
+        In de tere connectie tussen bloemen en vlinders ontvouwt zich een poëtisch schouwspel dat ons eraan herinnert hoe de natuur harmonieus samenwerkt. 
+        Het is een ode aan de pracht van het leven, waarin bloemen en vlinders elkaars danspartners zijn in het tijdloze ballet van de natuur.<br>
+        In de kleurrijke wereld van bloemen spreken ze een taal zonder woorden. Elke bloem draagt symbolische betekenissen en spreekt tot het hart op een unieke manier. Rozen fluisteren van liefde, terwijl lelies staan voor zuiverheid. 
+        Vlinders lijken deze geheime taal te begrijpen, en ze dansen van bloem naar bloem als boodschappers die de betekenis van de natuurlijke poëzie vertalen.<br>
+        Bloemen zijn als tijdreizigers die de geschiedenis van de aarde met zich meedragen. Elke soort heeft zijn eigen verhaal, geweven in de weefsels van de tijd. Ze hebben dinosaurussen overleefd, de opkomst en ondergang van beschavingen aanschouwd, en nog steeds bloeien ze voort. 
+        Vlinders, met hun kortstondige maar prachtige levens, lijken de tijd te omarmen terwijl ze zich voeden met de nectar van deze tijdreizende bloemen.<br>
+        Terwijl de zon ondergaat en de nacht haar intrede doet, ontvouwt zich een geheime wereld van nachtbloemen. Hun bloemblaadjes ontvouwen zich als betoverende kelken in het maanlicht, een schouwspel dat wordt bezocht door nachtvlinders. 
+        Deze mysterieuze wezens, met hun delicate vleugels, lijken te dansen op het ritme van de nachtbloemen, waarbij ze de donkere uren vullen met een fluistering van geheimen en magie.<br>
+        Bloemen zijn ware kunstenaars, elk seizoen schilderen ze de wereld met hun levendige tinten. Ze creëren een canvas van kleuren die de zintuigen beroeren en de verbeelding prikkelen. Vlinders, als vliegende penseelstreken, voegen een extra dimensie toe aan dit kunstwerk. 
+        Samen vormen ze een levendig palet, waarin de natuur zich manifesteert als de grootste kunstenaar aller tijden.<br>
+        
     </main>
 
     <footer>
       <hr />
-      <p class="smalltext">--jouw school-- --jaartal--</p>
+      <p class="smalltext">Emmauscollege 2023</p>
     </footer>
 
   </div>
