--- a/voedsel.html
+++ b/voedsel.html
@@ -7,11 +7,11 @@
   <meta charset="UTF-8" />
 </head>
 
-<body>
+<body id="achtergrond4">
   <div class="page">
 
     <header>
-      <h1>Wil je meer van mij weten?</h1>
+      <h1>Vlinder voedsel</h1>
     </header>
 
     <nav>
@@ -24,25 +24,53 @@
     </nav>
 
     <main>
-      <p>De persoonlijkheid is een begrip uit de psychologie en omvat een dynamisch en georganiseerd geheel van
-        karakteristieken (voelen, denken, doen) die aan een persoon kunnen worden toegekend. Dit geheel van
-        eigenschappen beschrijft de manier waarop een persoon in verschillende situaties zal reageren, de manier waarop
-        hij denkt, en waardoor hij gemotiveerd zal worden.</p>
-      <p>De term persoonlijkheid is afgeleid van het Latijnse 'persona' of masker, waardoor ook de connotatie is
-        ontstaan dat persoonlijkheid te maken heeft met het uiterlijke gedrag, dat wat de omgeving van iemand ziet. Het
-        verschil met 'karakter' is dat persoonlijkheid door opvoeding en omgeving beïnvloed worden en pas vorm krijgt
-        tijdens de adolescentie, terwijl karakter vaak meer als de biologische aanleg, de (aangeboren, vrij
-        onveranderlijke) aard van die persoon wordt beschouwd.</p>
-      <p>De persoonlijkheid wordt ook omschreven als het unieke en stabiele patroon van psychologische en
-        gedragskenmerken waardoor de ene mens zich van de andere onderscheidt. Eenvoudig uitgedrukt: de manier waarop
-        iemand met uiteenlopende situaties omgaat of het karakteristieke gedragspatroon dat iemand in verschillende
-        situaties vertoont, noemen we persoonlijkheid. Onderzoek laat zien dat de persoonlijkheid gedurende de
-        levensloop kan veranderen ten gevolge van levensgebeurtenissen.</p>
+        <strong>De Delicate Dans van Voeding:</strong> Het Voedsel van Vlinders
+
+        Vlinders, als levende kunstwerken van de natuur, hebben niet alleen een voorkeur voor esthetisch aantrekkelijke bloemen, maar ook een specifieke en cruciale voedingsbehoefte. 
+        Hun dieet, dat verandert gedurende verschillende stadia van hun levenscyclus, is een intrigerend onderdeel van hun levensverhaal.<br>
+
+        <strong>Nectar als Brandstof:</strong> Nectar, de zoete en voedzame vloeistof geproduceerd door bloemen, vormt het voornaamste dieet van volwassen vlinders. Uitgerust met een ingenieuze proboscis, 
+        een dunne buisvormige structuur, kunnen vlinders diep in bloemen reiken om deze kostbare nectar op te zuigen.  Als volwassen insecten voeden vlinders zich hoofdzakelijk met nectar.
+        Met hun buitengewoon lange zuigsnuit, de proboscis genaamd, kunnen vlinders diep in de kroon van bloemen reiken om de kostbare nectar te bereiken. 
+        Deze vloeibare brandstof voorziet vlinders van de energie die ze nodig hebben voor hun vlucht, voortplanting en andere dagelijkse activiteiten.
+        Zodra de rupsen hun transformatie voltooien en zich ontpoppen tot prachtige vlinders, verschuift hun dieet naar nectar. Nectar, de zoete vloeistof geproduceerd door bloemen, 
+        dient als de belangrijkste bron van energie voor volwassen vlinders. De ingenieuze proboscis, een dunne buisvormige structuur, stelt hen in staat diep in bloemen te reiken om de nectar op te zuigen. 
+        Deze elegante voedingswijze zorgt ervoor dat de vlinder voldoende energie heeft om te vliegen, te paren en zich voort te planten.<br>
+
+        <strong>De Rol van Bloemen:</strong> Bloemen, met hun gevarieerde kleuren en vormen, zijn niet alleen een visuele traktatie voor ons, maar fungeren ook als essentiële voedselbronnen voor vlinders. 
+        Vlinders hebben een voorkeur voor bepaalde soorten bloemen, vaak gekozen op basis van hun nectarproductie en toegankelijkheid.
+        Bloemen spelen een cruciale rol in het voedingsweb van vlinders. De gevarieerde kleuren en vormen van bloemen trekken niet alleen vlinders aan, maar dragen ook bij aan de bestuiving van planten, 
+        wat essentieel is voor de voortplanting van veel flora.
+        De voedselbehoeften van vlinders onthullen niet alleen hun biologische eisen maar illustreren ook de diep gewortelde wisselwerking tussen deze gevleugelde wezens en de flora om hen heen.
+        Het culinair ballet van vlinders is niet alleen een noodzakelijke biologische activiteit, maar ook een prachtig schouwspel dat de schoonheid van de natuur benadrukt. 
+        Het illustreert hoe vlinders, als meesterlijke dansers in dit natuurlijke ballet, bijdragen aan het voortdurende ritme van het leven op onze planeet.<br>
+
+        <strong>Rupsen en Plantaardig Dieet:</strong> In het larvale stadium, wanneer vlinders nog rupsen zijn, ligt hun dieet vaak op planten en bladeren. 
+        Rupsen van verschillende soorten hebben specifieke planten waarop ze zich voeden, bekend als waardplanten. Deze planten voorzien rupsen van de voedingsstoffen die nodig zijn voor hun groei en ontwikkeling.
+        In hun jeugdige rupsstadium concentreren vlinders zich op het eten van planten en bladeren. Rupsen zijn vaak kieskeurig over hun waardplanten, die specifieke planten zijn waarop ze zich voeden. 
+        Sommige rupsen geven de voorkeur aan de sappige bladeren van kruidachtige planten, terwijl anderen zich tegoed doen aan de bladeren van bomen. 
+        De plantaardige voeding voorziet de rups van de noodzakelijke voedingsstoffen om snel te groeien en zich voor te bereiden op de volgende fase van hun leven. Rupsen, de jeugdige fase van vlinders, 
+        voeden zich hoofdzakelijk met plantaardig voedsel zoals bladeren en stengels. Ze zijn vaak kieskeurig over hun waardplanten, die specifieke planten zijn waarop ze zich voeden. 
+        Dit plantaardige dieet voorziet rupsen van de noodzakelijke voedingsstoffen om snel te groeien en zich voor te bereiden op hun latere metamorfose tot prachtige vlinders. 
+        Het delicate evenwicht tussen rupsen en hun plantaardige menu draagt bij aan de biodiversiteit en het ecosysteem waarin ze gedijen.<br>
+
+        <strong>Minerale Aanvullingen:</strong> Naast nectar kunnen vlinders ook mineralen verkrijgen uit andere bronnen, zoals modderige plassen. 
+        Deze modderbaden voorzien de vlinders van belangrijke mineralen, zoals natrium, die niet voldoende aanwezig zijn in hun gebruikelijke voedselbronnen. 
+        Naast nectar hebben vlinders ook mineralen nodig om hun dieet aan te vullen. Dit halen ze vaak uit modderige plassen waar ze zich tegoed doen aan mineralen zoals natrium. 
+        Deze mineralen zijn essentieel voor hun voortplantingssucces en overleving. Vlinders nemen niet alleen hun voeding uit bloemen; ze halen ook essentiële mineralen uit modderige plassen.
+        Dit gedrag, bekend als modderbaden, voorziet hen van belangrijke mineralen zoals natrium. Deze mineralen zijn niet overvloedig aanwezig in hun gebruikelijke voedselbronnen en 
+        spelen een cruciale rol bij de voortplanting en algemene gezondheid van deze kleurrijke insecten. 
+        Het zoeken naar mineralen toont de complexe aanpassingen van vlinders aan, die verder gaan dan nectar en bloemen in hun zoektocht naar evenwichtige voeding.
+        <br>
+
+        Het voedselgedrag van vlinders is niet alleen een noodzakelijke biologische functie, maar het draagt ook bij aan het bredere ecosysteem. 
+        Als bestuivers spelen vlinders een cruciale rol in de voortplanting van bloemen en planten, waardoor ze onbewust bijdragen aan het behoud van biodiversiteit.
+        De delicate dans van voeding tussen vlinders en bloemen weeft een prachtig verhaal van wederzijdse afhankelijkheid in de weelderige tapestry van de natuur.<br>
     </main>
 
     <footer>
       <hr />
-      <p class="smalltext">--jouw school-- --jaartal--</p>
+      <p class="smalltext">Emmauscollege 2023</p>
     </footer>
 
   </div>
