--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <main>
       <h2>Home</h2>
-      <div class="middleblock1">
+      <div class="middleblock">
 
       <div class="item"> <img src="afbeeldingen/blauwe vlinder witte bloem (2).jpeg">
         <p class="item-tekst">
