--- a/overmij.html
+++ b/overmij.html
@@ -25,7 +25,7 @@
     </nav>
 
     <main>
-      <div class="middleblock2">
+      <div class="middleblock">
       <p>De wereld van vlinders is buitengewoon divers en omvat duizenden verschillende soorten. Hier zijn enkele opvallende en prachtige vlindersoorten van over de hele wereld:
 
         <strong>Monarchvlinder (Danaus plexippus):</strong> De monarchvlinder staat bekend om zijn opvallende oranje kleur en zwarte aderen. Ze staan ook bekend om hun opmerkelijke migratie, waarbij ze duizenden kilometers afleggen tussen Noord-Amerika en Mexico.<br>
