--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <div class="page">
 
     <header>
+      <div class="blok">
       <h1 id="hoofdtitel" class="belangrijk">Vlinders</h1>
+      </div>
     </header>
 
     <nav>
@@ -84,8 +86,9 @@
     </main>
 
     <footer>
-      <hr />
+      <div class="blok2">
       <p class="smalltext">Emmauscollege 2023</p>
+      </div>
     </footer>
 
   </div>
