--- a/info.html
+++ b/info.html
@@ -12,7 +12,9 @@
   <div class="page">
 
     <header>
-      <h1>Informatie overal!</h1>
+      <div class="blok">
+      <h1>Vlinders</h1>
+      </div>
     </header>
 
     <nav>
@@ -25,6 +27,8 @@
     </nav>
 
     <main>
+      <h2>Bloemen</h2>
+      <div class="middleblock">
       <p>
         Bloemen en vlinders vormen een betoverend duo in de natuur, een symbiose die de pracht van het leven en de cyclus van de seizoenen weerspiegelt. 
         Wanneer de lente haar intrede doet, ontvouwen bloemen hun kleurrijke bloemblaadjes als een uitnodiging aan de wereld. Het is een schouwspel dat niet alleen onze zintuigen streelt,
@@ -50,12 +54,14 @@
         Deze mysterieuze wezens, met hun delicate vleugels, lijken te dansen op het ritme van de nachtbloemen, waarbij ze de donkere uren vullen met een fluistering van geheimen en magie.<br>
         Bloemen zijn ware kunstenaars, elk seizoen schilderen ze de wereld met hun levendige tinten. Ze creëren een canvas van kleuren die de zintuigen beroeren en de verbeelding prikkelen. Vlinders, als vliegende penseelstreken, voegen een extra dimensie toe aan dit kunstwerk. 
         Samen vormen ze een levendig palet, waarin de natuur zich manifesteert als de grootste kunstenaar aller tijden.<br>
-        
+        </p>
+        </div>
     </main>
 
     <footer>
-      <hr />
+      <div class="blok2">
       <p class="smalltext">Emmauscollege 2023</p>
+      </div>
     </footer>
 
   </div>
