--- a/overmij.html
+++ b/overmij.html
@@ -12,7 +12,9 @@
   <div class="page">
 
     <header>
-      <h1>Wil je meer van mij weten?</h1>
+      <div class="blok">
+      <h1>Vlinders</h1>
+      </div>
     </header>
 
     <nav>
@@ -25,8 +27,9 @@
     </nav>
 
     <main>
+      <h2>Soorten vlinders</h2>
       <div class="middleblock">
-      <p>De wereld van vlinders is buitengewoon divers en omvat duizenden verschillende soorten. Hier zijn enkele opvallende en prachtige vlindersoorten van over de hele wereld:
+      <p>De wereld van vlinders is buitengewoon divers en omvat duizenden verschillende soorten. Hier zijn enkele opvallende en prachtige vlindersoorten van over de hele wereld:<br>
 
         <strong>Monarchvlinder (Danaus plexippus):</strong> De monarchvlinder staat bekend om zijn opvallende oranje kleur en zwarte aderen. Ze staan ook bekend om hun opmerkelijke migratie, waarbij ze duizenden kilometers afleggen tussen Noord-Amerika en Mexico.<br>
         
@@ -75,8 +78,9 @@
     </main>
 
     <footer>
-      <hr />
+      <div class="blok2">
       <p class="smalltext">Emmauscollege 2023</p>
+      </div>
     </footer>
 
   </div>
