--- a/voedsel.html
+++ b/voedsel.html
@@ -11,7 +11,9 @@
   <div class="page">
 
     <header>
-      <h1>Vlinder voedsel</h1>
+      <div class="blok">
+      <h1>Vlinders</h1>
+      </div>
     </header>
 
     <nav>
@@ -24,6 +26,8 @@
     </nav>
 
     <main>
+      <h2>Voedsel</h2>
+      <div class="middleblock">
         <strong>De Delicate Dans van Voeding:</strong> Het Voedsel van Vlinders
 
         Vlinders, als levende kunstwerken van de natuur, hebben niet alleen een voorkeur voor esthetisch aantrekkelijke bloemen, maar ook een specifieke en cruciale voedingsbehoefte. 
@@ -66,11 +70,13 @@
         Het voedselgedrag van vlinders is niet alleen een noodzakelijke biologische functie, maar het draagt ook bij aan het bredere ecosysteem. 
         Als bestuivers spelen vlinders een cruciale rol in de voortplanting van bloemen en planten, waardoor ze onbewust bijdragen aan het behoud van biodiversiteit.
         De delicate dans van voeding tussen vlinders en bloemen weeft een prachtig verhaal van wederzijdse afhankelijkheid in de weelderige tapestry van de natuur.<br>
+        </div>
     </main>
 
     <footer>
-      <hr />
+      <div class="blok2">
       <p class="smalltext">Emmauscollege 2023</p>
+      </div>
     </footer>
 
   </div>
