--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 
 <head>
   <link rel="stylesheet" href="style.css" />
-  <title>Dit is een eenvoudige website</title>
+  <title>Sanams website</title>
   <meta charset="UTF-8" />
-</head>
+  <link rel="icon" type="image/x-icon" href="afbeeldingen/favicon.ico">
 
 <body id="achtergrond">
   <div class="page">
