--- a/overmij.html
+++ b/overmij.html
@@ -4,8 +4,9 @@
 
 <head>
   <link rel="stylesheet" href="style.css" />
-  <title>Dit is een eenvoudige website</title>
+  <title>Sanams website</title>
   <meta charset="UTF-8" />
+  <link rel="icon" type="image/x-icon" href="afbeeldingen/favicon.ico">
 </head>
 
 <body id="achtergrond3">
